CDK: corrige Class.newInstance() deprecado y StringBuffer (fase 8)
Class.newInstance() esta deprecado desde Java 9. Se corrigen las 4 llamadas
reales (AdapterBase.createBean, createExtension y createModelElement, y
CdkTestRunner en tests); el resto de coincidencias eran factories estaticos
(DocumentBuilderFactory, XPathFactory, TransformerFactory), que son correctos.

La forma nueva anade NoSuchMethodException e InvocationTargetException, asi que
createBean unifica sus dos catch en ReflectiveOperationException conservando el
mismo CdkException, y createExtension declara ese supertipo; su unico llamador
ya capturaba Exception.

Renderkit: StringBuffer -> StringBuilder (campo privado sin sincronizacion).

No se migra Guava base.Function/Predicate a java.util.function: esos tipos se
pasan a Iterables/Collections2, que exigen los tipos de Guava, y desde Guava 21
ya extienden los de java.util.function. Tampoco se tocan los @author del codigo
original: son atribucion de autoria bajo LGPL, no legacy.

Build 261 tests, IT 3/3, 0 warnings de deprecacion.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>